fix: resize social icons on mobile; removed cursor on mobile

--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -158,4 +158,9 @@
     font-size: 25px;
     text-align: center;
   }
+
+  .socialIcon {
+    width: 50px !important;
+    height: 50px !important;
+  }
 }
